# social-gaming

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README.md  linux_setup.sh  unit_test_instruction_with_exaple.cpp
.gitlab/issue_templates/: issue_template.md
.gitlab/merge_request_templates/: merge_request_template.md
data/: serverconfig.json
lib/networking/: CMakeLists.txt
lib/networking/include/: Client.h  Server.h
lib/networking/src/: Client.cpp
log/: CMakeLists.txt
log/config/: CMakeLists.txt  logconfig.cpp
log/config/include/: logconfig.h
log/glog/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/GameClient/: CMakeLists.txt  GameChatWindow.cpp
src/GameClient/include/: GameChatWindow.h
src/GameData/: CMakeLists.txt
src/GameData/include/: GameData.h
src/GameRules/: CMakeLists.txt  GameRules.cpp
src/GameRules/include/: GameRules.h
src/GameServer/: CMakeLists.txt  GameServer.cpp
src/GameServer/include/: GameServer.h
src/GameState/: CMakeLists.txt  GameState.cpp
src/GameState/include/: GameState.h
src/JsonParser/: CMakeLists.txt  JsonParser.cpp  RuleParser.cpp  VariableParser.cpp
src/JsonParser/include/: JsonParser.h  RuleParser.h  VariableParser.h
src/ServerConfig/: CMakeLists.txt  ServerConfig.cpp
src/ServerConfig/include/: ServerConfig.h
src/User/: CMakeLists.txt  User.cpp
src/User/include/: User.h
test/: CMakeLists.txt  GameRuleTests.cpp  GameStateTests.cpp  ParserTests.cpp  main.cpp
test/gtest/: CMakeLists.txt
test/json/: gameSpec_addGlblMsg_advanced.json  gameSpec_addGlblMsg_basic.json  gameSpec_addGlblMsg_invalid.json  gameSpec_forEach_basic.json  gameSpec_forEach_differentElemName.json  gameSpec_gameStateVariables_basic.json  gameSpec_inputOutput_basic.json  gameSpec_while_basic.json  testGameSpec.json
tools/: CMakeLists.txt
tools/chatclient/: ChatWindow.h
